[gd_scene load_steps=21 format=3 uid="uid://ddqoe0xb40d2x"]

[ext_resource type="Script" path="res://Scripts/MenuController.gd" id="1_5nate"]
[ext_resource type="Script" path="res://Scripts/OptionController.gd" id="1_a36s8"]
[ext_resource type="PackedScene" uid="uid://nf6u0r7lf2pb" path="res://Scenes/01_MainMenu.tscn" id="2_i2yam"]
[ext_resource type="PackedScene" uid="uid://ymtiista3jxq" path="res://Scenes/02_SetGameCondition.tscn" id="3_42rd7"]
[ext_resource type="PackedScene" uid="uid://divs3j57r5cw2" path="res://Scenes/03_GamePlay.tscn" id="4_m7wh1"]
[ext_resource type="PackedScene" uid="uid://b6rjnkmuycudp" path="res://Scenes/04_Option.tscn" id="5_aj8u8"]
[ext_resource type="AudioStream" uid="uid://dwqb3pfl3vjo4" path="res://SFX/menu_click.ogg" id="7_ntgdg"]
[ext_resource type="AudioStream" uid="uid://dd4rot4gjwpfn" path="res://SFX/block_place_0.ogg" id="8_ajv83"]
[ext_resource type="AudioStream" uid="uid://clgiyyxt8nsl4" path="res://SFX/block_place_1.ogg" id="9_vqcnh"]
[ext_resource type="AudioStream" uid="uid://d0gqontj3wc1b" path="res://SFX/block_place_2.ogg" id="10_w0881"]
[ext_resource type="AudioStream" uid="uid://beku6dmub30l2" path="res://SFX/block_break_0.ogg" id="11_kdrde"]
[ext_resource type="AudioStream" uid="uid://dkmyvl867b1qx" path="res://SFX/block_break_1.ogg" id="12_byeoe"]
[ext_resource type="AudioStream" uid="uid://dy2uvxlcbnbha" path="res://SFX/block_break_2.ogg" id="13_qds40"]
[ext_resource type="AudioStream" uid="uid://dnfviwvjwtmwv" path="res://SFX/block_break_3.ogg" id="14_asy02"]
[ext_resource type="AudioStream" uid="uid://c7jil10pu3odn" path="res://SFX/block_break_4.ogg" id="15_jmnfg"]

[sub_resource type="Animation" id="Animation_6snjo"]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel_Fade:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuController")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_fade_in_complete"
}]
}

[sub_resource type="Animation" id="Animation_akgt7"]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel_Fade:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuController")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_on_fade_out_complete"
}]
}

[sub_resource type="Animation" id="Animation_uqvrd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel_Fade:theme_override_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4sd1g"]
_data = {
"FadeIn": SubResource("Animation_6snjo"),
"FadeOut": SubResource("Animation_akgt7"),
"RESET": SubResource("Animation_uqvrd")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_exems"]
bg_color = Color(0, 0, 0, 0)

[node name="RootScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionController" type="Node" parent="."]
script = ExtResource("1_a36s8")

[node name="MenuController" type="Node" parent="."]
script = ExtResource("1_5nate")

[node name="MenuList" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" parent="MenuList" instance=ExtResource("2_i2yam")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.5
offset_top = -81.5
offset_right = 120.5
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2

[node name="SetGameCondition" parent="MenuList" instance=ExtResource("3_42rd7")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -68.0
offset_right = 125.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Gameplay" parent="MenuList" instance=ExtResource("4_m7wh1")]
visible = false
layout_mode = 1

[node name="Option" parent="MenuList" instance=ExtResource("5_aj8u8")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -46.5
offset_right = 125.0
offset_bottom = 46.5
grow_horizontal = 2
grow_vertical = 2

[node name="FadeAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4sd1g")
}

[node name="Panel_Fade" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_exems")

[node name="SFX_Menu_Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ntgdg")

[node name="SFX_Block_Place_0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ajv83")

[node name="SFX_Block_Place_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vqcnh")

[node name="SFX_Block_Place_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_w0881")

[node name="SFX_Block_Break_0" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_kdrde")

[node name="SFX_Block_Break_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_byeoe")

[node name="SFX_Block_Break_2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_qds40")

[node name="SFX_Block_Break_3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_asy02")

[node name="SFX_Block_Break_4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_jmnfg")
